[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'triex'
version = "1.0.1"
description = 'A tool to generate semi-minimized regular expression alternations.'
readme = 'README.md'
license = 'MIT'
authors = [
  'lojoja <dev@lojoja.com>'
]
homepage = 'https://gitea.lojoja.com/lojoja/triex'
repository = 'https://gitea.lojoja.com/lojoja/triex'
documentation = 'https://gitea.lojoja.com/lojoja/triex'
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = '^3.10'
click = '^8'
clickext = {version = '^0', source = "lojoja"}

[tool.poetry.group.dev.dependencies]
black = '^22'
pylint = '^2'
pytest = '^7'
pytest-cov = '^3'

[tool.poetry.scripts]
triex = 'triex.cli:cli'

[[tool.poetry.source]]
name = "lojoja"
url = "https://gitea.lojoja.com/api/packages/lojoja/pypi/simple"

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.pyi?$'

[tool.coverage.run]
source = ['triex']
omit = ['tests/']

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'def __repr__',
  'if log:'
]

[tool.pylint.main]
ignore-paths = ['.venv']

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
addopts = '--cov'
filterwarnings = ['ignore:::.*pytest_cov*']
testpaths = ['tests']
